<resources>
    <string name="app_name">MyValue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_myreqs">My Requests</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="choose_who_you_are">Choose who you are?</string>
    <string name="i_am_a_seller">I am a Seller</string>
    <string name="i_am_a_buyer">I am a Buyer</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>

    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="expecting_price">Expecting Price</string>
    <string name="market_price">Market Price</string>
    <string name="my_price">My Price</string>
    <string name="locate_me">Locate me</string>
    <string name="my_current_location">My Current location ...</string>
    <string name="tryagain">Try Again!!</string>
    <string name="new_request">New Request</string>
    <string name="update">Update</string>
    <string name="accept">Accept</string>
    <string name="chat">Chat</string>
    <string name="reject">Reject</string>
    <string name="seller">I am a Seller</string>
    <string name="buyer">I am a Buyer</string>


    <string-array name="producttypes">
        <item>Select product</item>
        <item>Coconut</item>
        <item>Grass</item>
        <item>Fruits</item>
    </string-array>
</resources>
