<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.myprice.value.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_request"
        android:name="com.myprice.value.ui.request.NewRequestFragment"
        android:label="New Request"
        tools:layout="@layout/fragement_request" />

    <fragment
        android:id="@+id/nav_myreqs"
        android:name="com.myprice.value.ui.myrequests.MyRequestsFragment"
        android:label="@string/menu_myreqs"
        tools:layout="@layout/fragment_myrequests" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.myprice.value.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.myprice.value.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.myprice.value.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.myprice.value.ui.profile.ProfileViewFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_home" />
</navigation>