<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUpScreen">

    <ImageButton
        android:id="@+id/img_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_seller"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myreqs_product_img" />

    <ImageButton
        android:id="@+id/img_buyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_buyer"
        app:layout_constraintBottom_toBottomOf="@+id/img_seller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/img_seller" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/myreqs_product_img"
        android:layout_width="0dp"
        android:layout_height="@dimen/minheight"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/choose_who_you_are"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/myreqs_product_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/minheight"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/i_am_a_seller"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="@dimen/dim18"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_seller" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="@dimen/minheight"
        android:gravity="center"
        android:text="@string/i_am_a_buyer"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="@dimen/dim18"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/myreqs_product_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/myreqs_product_name" />

</androidx.constraintlayout.widget.ConstraintLayout>